Fix dashboard floating submit z-index (#12)

--- a/src/Pckg/Dynamic/public/less/dynamic.less
+++ b/src/Pckg/Dynamic/public/less/dynamic.less
@@ -17,6 +17,7 @@
   right: 0;
   padding: .5rem;
   transition: all 333ms ease-in-out;
+  z-index: 10;
   body.collapsed & {
     left: 5rem;
   }
